[package]
name = "rust_http_server_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version =  "1", features = ["full"] }
futures = "0.3"
pretty_env_logger = "0.5.0"